# vscode_clangd_apple_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_xcode_compilation_database.py
src/: main.m
